--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <div id="8" class="square"></div>
     </div>
   </div>
+  <br>
+  <div><button id="reset">Reiniciar Jogo</button></div>
 
   <script src="./scripts/game.js"></script>
   <script src="./scripts/interface.js"></script>
